--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 94afb27
+	base = 792a23d
 	trimbase = 
 	parent = release/jade/katana_driver
-	previous = 
+	previous = 94afb27
