--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c70655
+	base = 10886af
 	trimbase = 
 	parent = rpm/jade/katana_driver
-	previous = 
+	previous = 2c70655
