--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 592be5c
+	base = 71ca551
 	trimbase = 
 	parent = release/jade/katana_gazebo_plugins
-	previous = 
+	previous = 592be5c
