--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e20a16e
+	base = d6fbb64
 	trimbase = 
 	parent = rpm/jade/katana_gazebo_plugins
-	previous = 
+	previous = e20a16e
