--- a/katana_gazebo_plugins/CMakeLists.txt
+++ b/katana_gazebo_plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 2.8.3)
 project(katana_gazebo_plugins)
 
 #add_definitions(-fPIC)
@@ -32,7 +32,19 @@ catkin_package(
   DEPENDS
 )
 
-add_compile_options(-std=c++11)
+# This works on CMake 2.8.11.2 (Ubuntu Saucy) and earlier, where other variants fail:
+# - `add_compile_options(-std=c++11)` requires CMake >= 2.8.12 (Ubuntu Trusty)
+# - `set_property(TARGET tgt PROPERTY CXX_STANDARD 11)` requires CMake >= 3.1.0
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+if(COMPILER_SUPPORTS_CXX11)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+elseif(COMPILER_SUPPORTS_CXX0X)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+else()
+  message(WARNING "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+endif()
 
 include_directories(include ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
 link_directories(${GAZEBO_LIBRARY_DIRS})
