--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = 77cd300
-	trimbase = 
+	base = e4e0a4e
+	trimbase = 77cd300
 	parent = upstream
 	previous = 3845bae
