--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = 51c4223
-	trimbase = 
+	base = a600933
+	trimbase = 51c4223
 	parent = upstream
 	previous = 3845bae
