--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
 	base = f025baf
-	trimbase = c929091
+	trimbase = 
 	parent = upstream
 	previous = e31ce4d
