--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
-	base = 8c1c8af
-	trimbase = 
+	base = 93d2329
+	trimbase = 8c1c8af
 	parent = upstream
 	previous = 3845bae
