--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = 80afa59
-	trimbase = 
+	base = a1c224f
+	trimbase = 80afa59
 	parent = upstream
 	previous = 3845bae
