--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = cd50ba0
-	trimbase = 
+	base = 6905632
+	trimbase = cd50ba0
 	parent = upstream
 	previous = 3845bae
