--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_teleop
-	base = a65050c
-	trimbase = 
+	base = 60134df
+	trimbase = a65050c
 	parent = upstream
 	previous = 3845bae
