--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = 592be5c
-	trimbase = 9d1e553
+	trimbase = 
 	parent = upstream
 	previous = e31ce4d
