--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = fdb4411
-	trimbase = 
+	base = 9830b9b
+	trimbase = fdb4411
 	parent = upstream
 	previous = 3845bae
