--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = 59c440f
-	trimbase = 
+	base = 78ba90f
+	trimbase = 59c440f
 	parent = upstream
 	previous = 3845bae
