--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = 2b5d445
-	trimbase = 
+	base = b5a149e
+	trimbase = 2b5d445
 	parent = upstream
 	previous = 9c5a2e4
