--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = 39ff02a
-	trimbase = 
+	base = 124d5a8
+	trimbase = 39ff02a
 	parent = upstream
 	previous = 9c5a2e4
