--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_description
-	base = 442712a
-	trimbase = 
+	base = b40f0fc
+	trimbase = 442712a
 	parent = upstream
 	previous = 9c5a2e4
