--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
 	base = 033c051
-	trimbase = d197501
+	trimbase = 
 	parent = upstream
 	previous = e31ce4d
