--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
-	base = cde60d7
-	trimbase = 
+	base = dfd0d6d
+	trimbase = cde60d7
 	parent = upstream
 	previous = 9c5a2e4
