--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = 594c7ff
-	trimbase = 
+	base = 8c95048
+	trimbase = 594c7ff
 	parent = upstream
 	previous = 9c5a2e4
