--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = cc3c264
-	trimbase = 
+	base = f7bb3f1
+	trimbase = cc3c264
 	parent = upstream
 	previous = 9c5a2e4
