--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = cadfed9
-	trimbase = 1aad4bc
+	trimbase = 
 	parent = upstream
 	previous = e31ce4d
