--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = adc78c6
-	trimbase = 
+	base = 556866d
+	trimbase = adc78c6
 	parent = upstream
 	previous = 9c5a2e4
