--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = 3c5fa33
-	trimbase = 
+	base = fa05637
+	trimbase = 3c5fa33
 	parent = upstream
 	previous = 9c5a2e4
