--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.4-0": ["Mon Apr 11 2016", "Henning Deeken", "hdeeken@uni-osnabrueck.de"]}
+{"1.0.4-0": ["Mon Apr 11 2016", "Henning Deeken", "hdeeken@uni-osnabrueck.de"], "1.0.5-0": ["Tue Apr 12 2016", "Henning Deeken", "hdeeken@uni-osnabrueck.de"]}
