--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = bf798eb
-	trimbase = 
+	base = 970a776
+	trimbase = bf798eb
 	parent = upstream
 	previous = 277bf44
