--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = a947191
-	trimbase = 
+	base = 8decfcb
+	trimbase = a947191
 	parent = upstream
 	previous = 277bf44
