--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_description
-	base = 6f3d2d7
-	trimbase = 
+	base = fe0e3a3
+	trimbase = 6f3d2d7
 	parent = upstream
 	previous = 277bf44
