--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
 	base = dfd0d6d
-	trimbase = cde60d7
+	trimbase = 
 	parent = upstream
 	previous = 9c5a2e4
