--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
-	base = bcd9de7
-	trimbase = 
+	base = 1380eeb
+	trimbase = bcd9de7
 	parent = upstream
 	previous = 277bf44
