--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = c840361
-	trimbase = 
+	base = ae8614d
+	trimbase = c840361
 	parent = upstream
 	previous = 277bf44
