--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = e14a94f
-	trimbase = 
+	base = 0c5aead
+	trimbase = e14a94f
 	parent = upstream
 	previous = 277bf44
