--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = c6cb6b3
-	trimbase = 6f46295
+	trimbase = 
 	parent = upstream
 	previous = 9c5a2e4
