--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = 777fea1
-	trimbase = 
+	base = 6938b86
+	trimbase = 777fea1
 	parent = upstream
 	previous = 277bf44
