--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = eb15b07
-	trimbase = 
+	base = f4ff2e8
+	trimbase = eb15b07
 	parent = upstream
 	previous = 277bf44
