--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = 55b5da1
-	trimbase = 
+	base = 4540985
+	trimbase = 55b5da1
 	parent = upstream
 	previous = ce20305
