--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = f86086a
-	trimbase = 
+	base = 5ff33bf
+	trimbase = f86086a
 	parent = upstream
 	previous = ce20305
