--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_description
-	base = 7b2fa75
-	trimbase = 
+	base = a78030a
+	trimbase = 7b2fa75
 	parent = upstream
 	previous = ce20305
