--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = 8d1f7dc
-	trimbase = 
+	base = 38cc37f
+	trimbase = 8d1f7dc
 	parent = upstream
 	previous = ce20305
