--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = 9f37e7c
-	trimbase = 
+	base = 4731aee
+	trimbase = 9f37e7c
 	parent = upstream
 	previous = ce20305
