--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_teleop
-	base = 2c0635a
-	trimbase = 
+	base = 4c12ce2
+	trimbase = 2c0635a
 	parent = upstream
 	previous = ce20305
