--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = 5c508b6
-	trimbase = fe1f121
+	trimbase = 
 	parent = upstream
 	previous = 3845bae
