--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = c4e207a
-	trimbase = 
+	base = 16d6394
+	trimbase = c4e207a
 	parent = upstream
 	previous = ce20305
