--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = 2d5a500
-	trimbase = 
+	base = 65ed703
+	trimbase = 2d5a500
 	parent = upstream
 	previous = ce20305
