--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cb83e47
-	trimbase = 
+	trim = katana_tutorials
+	base = 8d2beca
+	trimbase = cb83e47
 	parent = upstream
 	previous = e9cece1
