--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f096c1c
-	trimbase = 
+	trim = kni
+	base = df005c8
+	trimbase = f096c1c
 	parent = upstream
 	previous = e9cece1
