--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7ac0e21
-	trimbase = 
+	trim = katana_description
+	base = dfb6b74
+	trimbase = 7ac0e21
 	parent = upstream
 	previous = e9cece1
