--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 67d71ec
-	trimbase = 
+	trim = katana
+	base = 4ecf1ed
+	trimbase = 67d71ec
 	parent = upstream
 	previous = e9cece1
