--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 58bb4ce
-	trimbase = 
+	trim = katana_driver
+	base = adfe263
+	trimbase = 58bb4ce
 	parent = upstream
 	previous = e9cece1
