--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 362f376
-	trimbase = 
+	trim = katana_teleop
+	base = fe1a9ca
+	trimbase = 362f376
 	parent = upstream
 	previous = e9cece1
