--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8026f2e
-	trimbase = 
+	trim = katana_msgs
+	base = bbab280
+	trimbase = 8026f2e
 	parent = upstream
 	previous = e9cece1
