--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 08fa1c5
-	trimbase = 
+	trim = katana_arm_gazebo
+	base = 8f7125c
+	trimbase = 08fa1c5
 	parent = upstream
 	previous = e9cece1
