--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4ecf1ed
+	base = 4d08b5e
 	trimbase = 
 	parent = release/kinetic/katana
-	previous = 
+	previous = 4ecf1ed
