--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 993e8fa
+	base = 4c1683e
 	trimbase = 
 	parent = debian/kinetic/katana
-	previous = 
+	previous = 993e8fa
