--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a3023c
+	base = 7225df6
 	trimbase = 
 	parent = debian/kinetic/katana_driver
-	previous = 
+	previous = 9a3023c
