--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bbab280
+	base = bc4c040
 	trimbase = 
 	parent = release/kinetic/katana_msgs
-	previous = 
+	previous = bbab280
