--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 61301f0
+	base = bf95fa3
 	trimbase = 
 	parent = debian/kinetic/katana_msgs
-	previous = 
+	previous = 61301f0
