--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 65370d5
+	base = 9d5bf10
 	trimbase = 
 	parent = debian/kinetic/katana_teleop
-	previous = 
+	previous = 65370d5
