--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da413dc
+	base = 9153080
 	trimbase = 
 	parent = debian/kinetic/katana_arm_gazebo
-	previous = 
+	previous = da413dc
