--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dfb6b74
+	base = 6849627
 	trimbase = 
 	parent = release/kinetic/katana_description
-	previous = 
+	previous = dfb6b74
