--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a8a771
+	base = 74395f6
 	trimbase = 
 	parent = debian/kinetic/katana_description
-	previous = 
+	previous = 3a8a771
