--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dd01a8c
+	base = 562f46d
 	trimbase = 
 	parent = debian/kinetic/kni
-	previous = 
+	previous = dd01a8c
