--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff5e434
+	base = 0b6ac68
 	trimbase = 
 	parent = debian/kinetic/katana_gazebo_plugins
-	previous = 
+	previous = ff5e434
