--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a2dae6e
+	base = c168c2f
 	trimbase = 
 	parent = debian/kinetic/katana_tutorials
-	previous = 
+	previous = a2dae6e
