--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9c2bb20
+	base = bef0d40
 	trimbase = 
 	parent = release/kinetic/katana_moveit_ikfast_plugin
-	previous = 
+	previous = 9c2bb20
