--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a1d5db
+	base = 01b1f6e
 	trimbase = 
 	parent = debian/kinetic/katana_moveit_ikfast_plugin
-	previous = 
+	previous = 9a1d5db
