--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91c0caa
+	base = e0ae743
 	trimbase = 
 	parent = debian/kinetic/katana
-	previous = 
+	previous = 91c0caa
