--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 02ca995
+	base = 8ff3be6
 	trimbase = 
 	parent = debian/kinetic/katana_driver
-	previous = 
+	previous = 02ca995
