--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 56a4de5
+	base = b21c2b0
 	trimbase = 
 	parent = debian/kinetic/katana_msgs
-	previous = 
+	previous = 56a4de5
