--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8ceb2cd
+	base = df553fe
 	trimbase = 
 	parent = debian/kinetic/katana_teleop
-	previous = 
+	previous = 8ceb2cd
