--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 73a861d
+	base = eed75fc
 	trimbase = 
 	parent = debian/kinetic/katana_arm_gazebo
-	previous = 
+	previous = 73a861d
