--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a26b78
+	base = 82e2189
 	trimbase = 
 	parent = debian/kinetic/katana_description
-	previous = 
+	previous = 9a26b78
