--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7eaaedc
+	base = 2e771a4
 	trimbase = 
 	parent = debian/kinetic/kni
-	previous = 
+	previous = 7eaaedc
