--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c22b616
+	base = 7eeeffd
 	trimbase = 
 	parent = debian/kinetic/katana_gazebo_plugins
-	previous = 
+	previous = c22b616
