--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 98590bf
+	base = 0eb774f
 	trimbase = 
 	parent = debian/kinetic/katana_tutorials
-	previous = 
+	previous = 98590bf
