--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c03b272
+	base = 0bb0a7a
 	trimbase = 
 	parent = debian/kinetic/katana_moveit_ikfast_plugin
-	previous = 
+	previous = c03b272
