--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 707f0e4
+	base = 0b67477
 	trimbase = 
 	parent = rpm/kinetic/katana
-	previous = 
+	previous = 707f0e4
