--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = adfe263
+	base = 455dbc6
 	trimbase = 
 	parent = release/kinetic/katana_driver
-	previous = 
+	previous = adfe263
