--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6cb38d2
+	base = 35d47ce
 	trimbase = 
 	parent = rpm/kinetic/katana_driver
-	previous = 
+	previous = 6cb38d2
