--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d76a829
+	base = 9d6bf4c
 	trimbase = 
 	parent = rpm/kinetic/katana_msgs
-	previous = 
+	previous = d76a829
