--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fe1a9ca
+	base = e5071df
 	trimbase = 
 	parent = release/kinetic/katana_teleop
-	previous = 
+	previous = fe1a9ca
