--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2865749
+	base = af442eb
 	trimbase = 
 	parent = rpm/kinetic/katana_teleop
-	previous = 
+	previous = 2865749
