--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8f7125c
+	base = e5f5013
 	trimbase = 
 	parent = release/kinetic/katana_arm_gazebo
-	previous = 
+	previous = 8f7125c
