--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d5beb91
+	base = cfaa54b
 	trimbase = 
 	parent = rpm/kinetic/katana_arm_gazebo
-	previous = 
+	previous = d5beb91
