--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74f80e1
+	base = 7ae2044
 	trimbase = 
 	parent = rpm/kinetic/katana_description
-	previous = 
+	previous = 74f80e1
