--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = df005c8
+	base = 001f495
 	trimbase = 
 	parent = release/kinetic/kni
-	previous = 
+	previous = df005c8
