--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d29d707
+	base = cd0e742
 	trimbase = 
 	parent = release/kinetic/katana_gazebo_plugins
-	previous = 
+	previous = d29d707
