--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6526c93
+	base = c585a5b
 	trimbase = 
 	parent = rpm/kinetic/katana_gazebo_plugins
-	previous = 
+	previous = 6526c93
