--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8d2beca
+	base = 2101622
 	trimbase = 
 	parent = release/kinetic/katana_tutorials
-	previous = 
+	previous = 8d2beca
