--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 764efa5
+	base = ca43f43
 	trimbase = 
 	parent = rpm/kinetic/katana_tutorials
-	previous = 
+	previous = 764efa5
