--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1937a03
+	base = 17aac4b
 	trimbase = 
 	parent = rpm/kinetic/katana_moveit_ikfast_plugin
-	previous = 
+	previous = 1937a03
