--- a/tracks.yaml
+++ b/tracks.yaml
@@ -83,9 +83,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: kinetic
+    last_version: 1.0.6
     name: katana_driver
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: git@github.com:uos-gbp/katana_driver-release.git
     release_tag: :{version}
     ros_distro: kinetic
