--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = 9464fbf
-	trimbase = 
+	base = 4327a3a
+	trimbase = 9464fbf
 	parent = upstream
 	previous = e9cece1
