--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = a4d54a5
-	trimbase = 
+	base = 8a1a247
+	trimbase = a4d54a5
 	parent = upstream
 	previous = e9cece1
