--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_description
-	base = 638459a
-	trimbase = 
+	base = 28797b0
+	trimbase = 638459a
 	parent = upstream
 	previous = e9cece1
