--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
 	base = 43bfda8
-	trimbase = 5f46d9f
+	trimbase = 
 	parent = upstream
 	previous = ce20305
