--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
-	base = b309e65
-	trimbase = 
+	base = 63bccf2
+	trimbase = b309e65
 	parent = upstream
 	previous = e9cece1
