--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = 39131ef
-	trimbase = 
+	base = 127cd9f
+	trimbase = 39131ef
 	parent = upstream
 	previous = e9cece1
