--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = 8fe7dd0
-	trimbase = 
+	base = 8e2dbb9
+	trimbase = 8fe7dd0
 	parent = upstream
 	previous = e9cece1
