--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_teleop
-	base = 5194dbf
-	trimbase = 
+	base = 3e745c8
+	trimbase = 5194dbf
 	parent = upstream
 	previous = e9cece1
