--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = c3edcf8
-	trimbase = be4b8f4
+	trimbase = 
 	parent = upstream
 	previous = ce20305
