--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
-	base = 61ca606
-	trimbase = 
+	base = d2c0635
+	trimbase = 61ca606
 	parent = upstream
 	previous = e9cece1
