--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = b052ae3
-	trimbase = 
+	base = 39521c3
+	trimbase = b052ae3
 	parent = upstream
 	previous = e9cece1
