--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = ec59e91
-	trimbase = 
+	base = d1e07b7
+	trimbase = ec59e91
 	parent = upstream
 	previous = e9cece1
