--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = f731050
-	trimbase = 
+	base = 38b6a1a
+	trimbase = f731050
 	parent = upstream
 	previous = 3f96fe1
