--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = 6904f6f
-	trimbase = 
+	base = bd9fa5f
+	trimbase = 6904f6f
 	parent = upstream
 	previous = 3f96fe1
