--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_description
-	base = e655420
-	trimbase = 
+	base = 9adaa49
+	trimbase = e655420
 	parent = upstream
 	previous = 3f96fe1
