--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
-	base = ed12a28
-	trimbase = 
+	base = 2732816
+	trimbase = ed12a28
 	parent = upstream
 	previous = 3f96fe1
