--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = 8f7a9bf
-	trimbase = 
+	base = 24e59d2
+	trimbase = 8f7a9bf
 	parent = upstream
 	previous = 3f96fe1
