--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = f0935a1
-	trimbase = 
+	base = d210f4d
+	trimbase = f0935a1
 	parent = upstream
 	previous = 3f96fe1
