--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_teleop
-	base = e332de6
-	trimbase = 
+	base = 6d3c6b2
+	trimbase = e332de6
 	parent = upstream
 	previous = 3f96fe1
