--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = efeb7d2
-	trimbase = 0e9b106
+	trimbase = 
 	parent = upstream
 	previous = 277bf44
