--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
-	base = ff81739
-	trimbase = 
+	base = 15d07e9
+	trimbase = ff81739
 	parent = upstream
 	previous = 3f96fe1
