--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = 51013f3
-	trimbase = 
+	base = 7a03181
+	trimbase = 51013f3
 	parent = upstream
 	previous = 3f96fe1
