--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = 6b5cb90
-	trimbase = 
+	base = 9c0cbba
+	trimbase = 6b5cb90
 	parent = upstream
 	previous = 3f96fe1
