--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = 3877874
-	trimbase = 
+	base = dc21dbd
+	trimbase = 3877874
 	parent = upstream
 	previous = 3f96fe1
