--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = 5babc0d
-	trimbase = 
+	base = 42e29d2
+	trimbase = 5babc0d
 	parent = upstream
 	previous = 3f96fe1
