--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_description
-	base = 450371b
-	trimbase = 
+	base = e41d05d
+	trimbase = 450371b
 	parent = upstream
 	previous = 3f96fe1
