--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
 	base = 63bccf2
-	trimbase = b309e65
+	trimbase = 
 	parent = upstream
 	previous = e9cece1
