--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
-	base = 95a537f
-	trimbase = 
+	base = fd168e9
+	trimbase = 95a537f
 	parent = upstream
 	previous = 3f96fe1
