--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = 841902b
-	trimbase = 
+	base = dda4e2a
+	trimbase = 841902b
 	parent = upstream
 	previous = 3f96fe1
