--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = df1f7dc
-	trimbase = 
+	base = 363fae6
+	trimbase = df1f7dc
 	parent = upstream
 	previous = 3f96fe1
