--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_teleop
-	base = 606baa1
-	trimbase = 
+	base = aec5180
+	trimbase = 606baa1
 	parent = upstream
 	previous = 3f96fe1
