--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = d2c0635
-	trimbase = 61ca606
+	trimbase = 
 	parent = upstream
 	previous = e9cece1
