--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
-	base = bba5f00
-	trimbase = 
+	base = c4bf066
+	trimbase = bba5f00
 	parent = upstream
 	previous = 3f96fe1
