--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = b39f27a
-	trimbase = 
+	base = 7702daa
+	trimbase = b39f27a
 	parent = upstream
 	previous = 3f96fe1
