--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = 971ddda
-	trimbase = 
+	base = 79554c8
+	trimbase = 971ddda
 	parent = upstream
 	previous = 3f96fe1
