--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_tutorials
-	base = 91aa94e
-	trimbase = 
+	base = 8a16e18
+	trimbase = 91aa94e
 	parent = upstream
 	previous = 3f96fe1
