--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = kni
-	base = a3bca1a
-	trimbase = 
+	base = 6825853
+	trimbase = a3bca1a
 	parent = upstream
 	previous = 3f96fe1
