--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_description
-	base = c56ef9b
-	trimbase = 
+	base = 707182c
+	trimbase = c56ef9b
 	parent = upstream
 	previous = 3f96fe1
