--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
 	base = 9c2bb20
-	trimbase = b45efba
+	trimbase = 
 	parent = upstream
 	previous = e9cece1
