--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_moveit_ikfast_plugin
-	base = 65100db
-	trimbase = 
+	base = f1b5da3
+	trimbase = 65100db
 	parent = upstream
 	previous = 3f96fe1
