--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana
-	base = 896bafc
-	trimbase = 
+	base = 6f03465
+	trimbase = 896bafc
 	parent = upstream
 	previous = 3f96fe1
