--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_driver
-	base = 844c8fd
-	trimbase = 
+	base = 4cadec0
+	trimbase = 844c8fd
 	parent = upstream
 	previous = 3f96fe1
