--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_teleop
-	base = b138120
-	trimbase = 
+	base = 62298ef
+	trimbase = b138120
 	parent = upstream
 	previous = 3f96fe1
