--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
 	base = d29d707
-	trimbase = 3aaa664
+	trimbase = 
 	parent = upstream
 	previous = e9cece1
