--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_gazebo_plugins
-	base = 9f07cd3
-	trimbase = 
+	base = 13faa42
+	trimbase = 9f07cd3
 	parent = upstream
 	previous = 3f96fe1
