--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_msgs
-	base = 21411ac
-	trimbase = 
+	base = 3dc6c7e
+	trimbase = 21411ac
 	parent = upstream
 	previous = 3f96fe1
