--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = katana_arm_gazebo
-	base = 172ae96
-	trimbase = 
+	base = d817440
+	trimbase = 172ae96
 	parent = upstream
 	previous = 3f96fe1
