--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.6-0": ["Sat Jan 28 2017", "Henning Deeken", "hdeeken@uni-osnabrueck.de"]}
+{"1.0.7-0": ["Sat Feb 11 2017", "Henning Deeken", "hdeeken@uni-osnabrueck.de"], "1.0.6-0": ["Sat Jan 28 2017", "Henning Deeken", "hdeeken@uni-osnabrueck.de"]}
