--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0e2f657
-	trimbase = 
+	trim = katana_tutorials
+	base = 9614bd7
+	trimbase = 0e2f657
 	parent = upstream
 	previous = 3f96fe1
